refactor: deprecated "exec" command